--- a/views/db.ejs
+++ b/views/db.ejs
@@ -12,7 +12,7 @@
 
 <ul>
     <% results.forEach(r => { %>
-        <li><%= r.nombre %> - <%= r.direccion %></li>
+        <li><%= r.nombre %> - <%= r.url %></li>
     <% }); %>
 </ul>
 
